v1.2.0
  - [bugfix]   Fix a bug where markup [containers] weren't 100% high by default
               which caused some problems with slide layout.
  - [internal] Rewrite most web interface JavaScript files and clean them up.
  - [docs]     Add JSDoc documentation to web interface JavaScript.

v1.1.1
  - [feature]  Enable multiarch Docker image builds in the CI pipepline. Images
               are now built for AMD64, ARMv6, ARMv7 and ARM64.

v1.1.0
  - [internal] Separate private and public files in the directory tree
               to naturally prevent access to private files. (PR #56)
  - [feature]  Implement [bgimg] and [bgcolor] markup tags for styling
               slide backgrounds. (issue #75)
  - [feature]  Implement buttons for manual slide navigation in display.
  - [internal] Mostly rewrite the API system
  - [internal] Use PHP autoloading and namespaces instead of direct
               file includes.
  - [internal] Improve various classes and PHP files to make them more object
               oriented.
  - [internal] Implement a testing framework with PHPUnit and write tests
               for all API endpoints.
  - [bugfix]   Fix various bugs in the backend that were discovered while
               writing tests.
  - [build]    Make the build system more modular.
  - [build]    Write separate interactive and CLI versions of the apache2-debian
               target. (apache2-debian-interactive and apache2-debian)
  - [build]    Various improvements to the build system.
  - [docs]     Generate documentation with Doxygen.
  - [internal] Implement HTTP cache support for slide asset fetching endpoints.
               (issue #53)
  - [bugfix]   Fix a bug where uploading/removing slide assets was allowed even
               when the slide was not locked. (issue #81)
  - [bugfix]   Fix a bug where a slide could be deleted even when it was
               not locked. (issue #80)
  - [bugfix]   Fix a bug where an error was thrown when changing queues if an