@@ -3,6 +3,11 @@ v1.2.0
                which caused some problems with slide layout.
   - [internal] Rewrite most web interface JavaScript files and clean them up.
   - [docs]     Add JSDoc documentation to web interface JavaScript.
+  - [internal] Prepare the unit test system for backend PHP testing.
+  - [internal] Write some unit tests for backend PHP code.
+  - [feature]  Implement support for using individual slides in multiple queues.
+  - [internal] Move Slide indexing from the Slide class to Queue.
+  - [internal] Implement refcounts for Slides instead of storing Queue names.
 
 v1.1.1
   - [feature]  Enable multiarch Docker image builds in the CI pipepline. Images
